	    - use real pow op
	    - new version of perl6 driver
	    - config script (pconfig.pl)

	* Fixes (Leo):
	    - tidied catch-blocks
	    - tidied flattening
	    - update config/gen/makefiles/perl6.in to call pconfig.pl

	* Broken (me, probably):
	    - "$x = @xs" will leave $x undefined.
	
2002-08-19

	* Additions:
	    - return values (documentation coming).
	    - pconfig.pl extracts lib extension from Makefile (Leo)
	    - perl6 (Leo)
	        - new options, including support for --shared native -C
		- some doc

	* Fixes:
	    - perl6 (Leo)
	        - catch a pbc2c warning
	        - use libparrot.a for -C
	
	* Test-failures:
	    - 3.{2,4-7}, a.2 -- register clobbering.
	    - 8.3 -- not sure

2002-08-20

	* Additions:
	    - first cut at regexes.  Very rough, but it's fun to play
	      with.
	
	* Fixes:
	    - "f($x)" and "f $x" now behave as expected when f is declared
	      with a prototype.
	    - allow comma-separated expressions in "loop(;;)"
	    - docs and tweaks for perl6 driver (Leo)

2002-08-22

	* Additions:
	    - more exception tests (Leo).
	
	* Fixes:
	    - maybe_comma tweaks (Leo).
	    - remove debugging warning.
	    - cloning cleanup (Leo).
	    - less temporaries for a couple assignments (Leo).
	    - context for sub-calls with parens was wrong.

2002-08-23

	* Fixes:
	    - no-arg subs were failing with '()'.

2002-08-24
	
	* Additions:
	    - substr() and length() (Leo).
	    - examples: life, mandel, life-ar (Leo).
	    - examples/qsort.p6
	    - $::RD_NO_HITEM and $::RD_NO_TRACE on by default
	    - t/rx -- regex tests (basic.t for now)
	    - '!~' to go with '=~'

	* Fixes:
	    - make sure keywords don't match prefixes of sub names.
	    - better handling of returns to various contexts using
	      standard functions (TYPE_in_context()).
	    - tidied up examples.
	    - repetition specifiers can be mixed vars and literals.
	
	* Test-failures:
	    - none.  That's right.  None (on Linux/PPC, w/imcc patch).